--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,6 @@ jobs:
         - "3.11"
         - "3.12"
         # Workaround for actions/setup-python#508
-        dev:
-        - -dev
         platform:
         - ubuntu-22.04
         - macos-latest
@@ -98,9 +96,9 @@ jobs:
         run: python -m downloads.preload setupcfg_examples.txt
       - name: Install tox
         run: |
-          python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' tox
+          python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' setuptools tox
       - name: Run tests
-        run: tox
+        run: tox -- -p no:perf
       - name: Create coverage report
         if: hashFiles('.coverage') != ''  # Rudimentary `file.exists()`
         run: pipx run coverage xml --ignore-errors
@@ -127,7 +125,7 @@ jobs:
         run: |
           python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' tox
       - name: Run tests
-        run: tox
+        run: tox -- -p no:perf
 
   check:  # This job does nothing and is only used for the branch protection
     if: always()
@@ -180,7 +178,7 @@ jobs:
         shell: C:\cygwin\bin\env.exe CYGWIN_NOWINPATH=1 CHERE_INVOKING=1 C:\cygwin\bin\bash.exe -leo pipefail -o igncr {0}
         run: |
           git config --global --add safe.directory "$(cygpath -u "$GITHUB_WORKSPACE")" # workaround for #3408
-          tox
+          tox -- -p no:perf
       - name: Create coverage report
         if: hashFiles('.coverage') != ''  # Rudimentary `file.exists()`
         run: |
@@ -202,7 +200,6 @@ jobs:
 
   integration-test:
     needs: test
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && contains(github.ref, 'refs/tags/'))
     # To avoid long times and high resource usage, we assume that:
     # 1. The setuptools APIs used by packages don't vary too much with OS or
     #    Python implementation
@@ -242,12 +239,13 @@ jobs:
       - name: Setup Python
         uses: MatteoH2O1999/setup-python@v4
         with:
-          python-version: 3.11-dev
+          python-version: 3.11
       - name: Install tox
         run: |
           python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' tox
       - name: Release
         run: tox -e release
-        env:
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: "actions/upload-artifact@v4"
+        with:
+          name: artifacts
+          path: ./dist/*
