--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ passenv =
 	windir  # required for test_pkg_resources
 	# honor git config in pytest-perf
 	HOME
-install_command=python -m pip install --index-url=https://:2023-06-19@time-machines-pypi.sealsecurity.io --trusted-host=time-machines-pypi.sealsecurity.io --use-pep517 pip==22.2.2 {opts} {packages}
+install_command=python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' --trusted-host=time-machines-pypi.sealsecurity.io --use-pep517 pip==22.2.2 {opts} {packages}
 
 [testenv:integration]
 deps =
@@ -46,7 +46,7 @@ setenv =
 commands =
 	pytest --integration {posargs:-vv --durations=10} setuptools/tests/integration
 	# use verbose mode by default to facilitate debugging from CI logs
-install_command=python -m pip install --index-url=https://:2023-06-19@time-machines-pypi.sealsecurity.io --trusted-host=time-machines-pypi.sealsecurity.io --use-pep517 pip==22.2.2 {opts} {packages}
+install_command=python -m pip install --index-url 'https://:2023-06-19T15:53:03.089995Z@time-machines-pypi.sealsecurity.io/' --trusted-host=time-machines-pypi.sealsecurity.io --use-pep517 pip==22.2.2 {opts} {packages}
 
 [testenv:docs]
 extras =
